--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "*",
+    "mongoose": "^6.7.1",
     "node": "^14.21.0",
     "path": "^0.12.7",
-    "uuid": "^9.0.0",
     "ws": "^8.10.0"
   },
   "devDependencies": {
